# pwg_testing_presentation

./: .gitignore  .gitlab-ci.yml  8_March_2023-Presentation.md  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
Presentation/: 8_March_2023-Presentation.md  Makefile
src/primes/: __init__.py
